# smallchat

./: .gitignore  CMakeLists.txt  README.md  build.sh  cleanup.ps1  cleanup.sh  kill_smallchat_processes.ps1  message_history.txt  run.sh  test_all.sh  test_protocol.cpp  users.txt
docs/: 01_architecture.md
examples/: test_chat.cpp
include/: client.h  common.h  server.h  web_server.hpp
src/: client.cpp  common.cpp  main_client.cpp  main_server.cpp  main_web.cpp  server.cpp  web_server.cpp  web_server_impl.cpp
tests/: README.md  integration_test.sh  test.sh  test_concurrent.sh
web/: index.html  script.js  style.css
